--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.77.0",
     "init": "^0.1.2",
+    "joi": "^18.0.2",
     "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "pdf-parse": "^2.4.5"
   }
 }
